v1.0

Released on CRAN

v1.0.1

On GitHub

FEATURE: You can now directly specify the region to use for fitting in profitSetupData (before it always used a combination of segim and mask, which it will use if this is not provided). Old code will work as before. Argument order has changed to accommodate.

FIXED: Solaris issue with gauss.cpp (removed it for now since we do not use it).

FIXED: profitMakePlots so the region is shown correctly.

TO DO:

FFTW integration within libprofit