@@ -36,71 +36,84 @@ profitLikeModel=function(parm, Data, makeplots=FALSE,
   if(length(Data$finesample)>0) finesample = Data$finesample
   profitCheckFinesample(finesample)
   
-  fitIDs=which(unlist(Data$tofit))
-  parm=parm[1:length(fitIDs)]
-  paramsinit=unlist(Data$modellist)
-  paramsnew=paramsinit
-  paramsnew[fitIDs]=parm
+  # fitIDs=which(unlist(Data$tofit))
+  # parm=parm[1:length(fitIDs)]
+  # paramsinit=unlist(Data$modellist)
+  # paramsnew=paramsinit
+  # paramsnew[fitIDs]=parm
+  # 
+  # # Flatten or unlist?
+  # tounlogIDs=which(unlist(Data$tolog) & unlist(Data$tofit))
+  # for(i in tounlogIDs){
+  #   paramsnew[i]=10^paramsnew[i]
+  # }
+  # # Inherit values for NA flags
+  # inheritIDs=which(is.na(unlist(Data$tofit)))
+  # for(i in inheritIDs) paramsnew[i]=paramsnew[i-1]
+  # 
+  # # Re-list the new linear modellist
+  # modellistnew=relist(paramsnew,Data$modellist)
+  # 
+  # # Apply constraints to the new linear modellist
+  # if(length(Data$constraints)>0){
+  #   modellistnew=Data$constraints(modellistnew)
+  # }
+  # 
+  # # Specify interval limits on the now linear data
+  # if(length(Data$intervals)>0){
+  #   #paramsnew = unlist(modellistnew)
+  #   #intervals = unlist(Data$intervals)
+  #   #for(i in 1:length(paramsnew)){
+  #   #  paramsnew[i]=max(intervals[(i-1)*2+1], min(intervals[(i-1)*2+2], paramsnew[i], na.rm = FALSE), na.rm = FALSE)
+  #   #}
+  #   ## Re-list the new linear modellist
+  #   #modellistnew=relist(paramsnew,Data$modellist)
+  #   #New approach, to deal with partial interval limits:
+  #   compnames=names(Data$intervals)
+  #   for(i in compnames){
+  #     #For the more typical non-PSF case
+  #     if(i != "psf"){
+  #       subnames=names(Data$intervals[[i]])
+  #       for(j in subnames){
+  #         subsublength=length(modellistnew[[i]][[j]])
+  #         for(k in 1:subsublength){
+  #           intervalmin=Data$intervals[[i]][[j]][[k]][1]
+  #           intervalmax=Data$intervals[[i]][[j]][[k]][2]
+  #           currentval=modellistnew[[i]][[j]][k]
+  #           modellistnew[[i]][[j]][k]=max(intervalmin, min(intervalmax, currentval, na.rm = FALSE), na.rm = FALSE)
+  #         }
+  #       }
+  #     }else{
+  #       #For the deeper PSF case:
+  #       subnames=names(Data$intervals[[i]])
+  #       for(j in subnames){
+  #         subsubnames=Data$intervals[[i]][[j]]
+  #         for(k in subsubnames){
+  #           subsubsublength=length(modellistnew[[i]][[j]][[k]])
+  #           for(l in 1:subsublength){
+  #             intervalmin=Data$intervals[[i]][[j]][[k]][[l]][1]
+  #             intervalmax=Data$intervals[[i]][[j]][[k]][[l]][2]
+  #             currentval=modellistnew[[i]][[j]][[k]][l]
+  #             modellistnew[[i]][[j]][[k]][l]=max(intervalmin, min(intervalmax, currentval, na.rm = FALSE), na.rm = FALSE)
+  #           }
+  #         }
+  #       }
+  #     }
+  #   }
+  # }
+  # 
+  # # Unlist and extract the tolog elements and log where required
+  # paramsnew=unlist(modellistnew)
+  # for(i in tounlogIDs){
+  #   paramsnew[i]=log10(paramsnew[i])
+  # }
+  # 
+  # # Specify the new parm to be parsed back to the external optimisation function
+  # parm=paramsnew[fitIDs]
   
-  # Flatten or unlist?
-  tounlogIDs=which(unlist(Data$tolog) & unlist(Data$tofit))
-  for(i in tounlogIDs){
-    paramsnew[i]=10^paramsnew[i]
-  }
-  # Inherit values for NA flags
-  inheritIDs=which(is.na(unlist(Data$tofit)))
-  for(i in inheritIDs) paramsnew[i]=paramsnew[i-1]
-  
-  # Re-list the new linear modellist
-  modellistnew=relist(paramsnew,Data$modellist)
-  
-  # Apply constraints to the new linear modellist
-  if(length(Data$constraints)>0){
-    modellistnew=Data$constraints(modellistnew)
-  }
-  
-  # Specify interval limits on the now linear data
-  if(length(Data$intervals)>0){
-    #paramsnew = unlist(modellistnew)
-    #intervals = unlist(Data$intervals)
-    #for(i in 1:length(paramsnew)){
-    #  paramsnew[i]=max(intervals[(i-1)*2+1], min(intervals[(i-1)*2+2], paramsnew[i], na.rm = FALSE), na.rm = FALSE)
-    #}
-    ## Re-list the new linear modellist
-    #modellistnew=relist(paramsnew,Data$modellist)
-    #New approach, to deal with partial interval limits:
-    compnames=names(Data$intervals)
-    for(i in compnames){
-      #For the more typical non-PSF case
-      if(i != "psf"){
-        subnames=names(Data$intervals[[i]])
-        for(j in subnames){
-          subsublength=length(modellistnew[[i]][[j]])
-          for(k in 1:subsublength){
-            intervalmin=Data$intervals[[i]][[j]][[k]][1]
-            intervalmax=Data$intervals[[i]][[j]][[k]][2]
-            currentval=modellistnew[[i]][[j]][k]
-            modellistnew[[i]][[j]][k]=max(intervalmin, min(intervalmax, currentval, na.rm = FALSE), na.rm = FALSE)
-          }
-        }
-      }else{
-        #For the deeper PSF case:
-        subnames=names(Data$intervals[[i]])
-        for(j in subnames){
-          subsubnames=Data$intervals[[i]][[j]]
-          for(k in subsubnames){
-            subsubsublength=length(modellistnew[[i]][[j]][[k]])
-            for(l in 1:subsublength){
-              intervalmin=Data$intervals[[i]][[j]][[k]][[l]][1]
-              intervalmax=Data$intervals[[i]][[j]][[k]][[l]][2]
-              currentval=modellistnew[[i]][[j]][[k]][l]
-              modellistnew[[i]][[j]][[k]][l]=max(intervalmin, min(intervalmax, currentval, na.rm = FALSE), na.rm = FALSE)
-            }
-          }
-        }
-      }
-    }
-  }
+  remakeout=profitRemakeModellist(parm=parm, Data=Data)
+  modellistnew=remakeout$modellist
+  parm=remakeout$parm
   
   # Calculate priors with the new versus old modellist
   if(length(Data$priors)>0){
@@ -108,15 +121,6 @@ profitLikeModel=function(parm, Data, makeplots=FALSE,
   }else{
     priorsum=0
   }
-  
-  # Unlist and extract the tofit elements and log where required
-  paramsnew=unlist(modellistnew)
-  for(i in tounlogIDs){
-    paramsnew[i]=log10(paramsnew[i])
-  }
-  
-  # Specify the new parm to be parsed back to the external optimisation function
-  parm=paramsnew[fitIDs]
   
   if(Data$fitpsf) {
     psf = profitMakePointSource(modellist=model$psf, finesample = finesample) 
