@@ -1,55 +1,101 @@
-profitRemakeModelList=function(parm, modellist, tofit, tolog, intervals, constraints){
-  fitIDs=which(unlist(tofit))
-  parm=parm[1:length(fitIDs)]
-  paramsinit=unlist(modellist)
-  paramsnew=paramsinit
-  paramsnew[fitIDs]=parm
-  inheritIDs=which(is.na(unlist(tofit)))
-  paramsnew[inheritIDs]=paramsnew[inheritIDs-1]
-  if(!missing(tolog)){
-    tounlogIDs=which(unlist(tolog) & unlist(tofit))
-    paramsnew[tounlogIDs]=10^paramsnew[tounlogIDs]
+profitRemakeModellist=function(parm, modellist, tofit, tolog, intervals, constraints, Data){
+  if(!missing(Data) & missing(parm)){
+    parm=Data$init
   }
-  modellistnew = relist(paramsnew, modellist)
+  if(!missing(Data) & missing(modellist)){
+    modellist=Data$modellist
+  }
+  if(!missing(Data) & missing(tofit)){
+    tofit=Data$tofit
+  }
+  if(!missing(Data) & missing(tolog)){
+    tolog=Data$tolog
+  }
+  if(!missing(Data) & missing(intervals)){
+    intervals=Data$intervals
+  }
+  if(!missing(Data) & missing(constraints)){
+    constraints=Data$constraints
+  }
+  fitIDs=which(unlist(tofit))
+  if(length(fitIDs)>=1){
+    parm=parm[1:length(fitIDs)]
+    parmnew=unlist(modellist)
+    parmnew[fitIDs]=parm
+    # Inherit values for NA flags
+    inheritIDs=which(is.na(unlist(tofit)))
+    for(i in inheritIDs){parmnew[i]=parmnew[i-1]}
+  }else{
+    parmnew=parm
+  }
+  
+  if(!missing(tolog)){
+    if(length(tolog)>0){
+      tounlogIDs=which(unlist(tolog) & unlist(tofit))
+      parmnew[tounlogIDs]=10^parmnew[tounlogIDs]
+    }
+  }else{
+    tounlogIDs={}
+  }
+  
+  modellistnew = relist(parmnew, modellist)
   # Apply constraints to the new linear modellist
+  
   if(!missing(constraints)){
-    modellistnew=constraints(modellistnew)
+    if(length(constraints)>0){
+      modellistnew=constraints(modellistnew)
+    }
   }
   
   # Specify interval limits on the now linear data
   if(!missing(intervals)){
     #New approach, to deal with partial interval limits:
-    compnames=names(intervals)
-    for(i in compnames){
-      #For the more typical non-PSF case
-      if(i != "psf"){
-        subnames=names(intervals[[i]])
-        for(j in subnames){
-          subsublength=length(modellistnew[[i]][[j]])
-          for(k in 1:subsublength){
-            intervalmin=intervals[[i]][[j]][[k]][1]
-            intervalmax=intervals[[i]][[j]][[k]][2]
-            currentval=modellistnew[[i]][[j]][k]
-            modellistnew[[i]][[j]][k]=max(intervalmin, min(intervalmax, currentval, na.rm = FALSE), na.rm = FALSE)
+    if(length(intervals)>0){
+      compnames=names(intervals)
+      for(i in compnames){
+        #For the more typical non-PSF case
+        if(i != "psf"){
+          subnames=names(intervals[[i]])
+          for(j in subnames){
+            subsublength=length(modellistnew[[i]][[j]])
+            for(k in 1:subsublength){
+              intervalmin=intervals[[i]][[j]][[k]][1]
+              intervalmax=intervals[[i]][[j]][[k]][2]
+              currentval=modellistnew[[i]][[j]][k]
+              modellistnew[[i]][[j]][k]=max(intervalmin, min(intervalmax, currentval, na.rm = FALSE), na.rm = FALSE)
+            }
           }
-        }
-      }else{
-        #For the deeper PSF case:
-        subnames=names(intervals[[i]])
-        for(j in subnames){
-          subsubnames=intervals[[i]][[j]]
-          for(k in subsubnames){
-            subsubsublength=length(modellistnew[[i]][[j]][[k]])
-            for(l in 1:subsublength){
-              intervalmin=intervals[[i]][[j]][[k]][[l]][1]
-              intervalmax=intervals[[i]][[j]][[k]][[l]][2]
-              currentval=modellistnew[[i]][[j]][[k]][l]
-              modellistnew[[i]][[j]][[k]][l]=max(intervalmin, min(intervalmax, currentval, na.rm = FALSE), na.rm = FALSE)
+        }else{
+          #For the deeper PSF case:
+          subnames=names(intervals[[i]])
+          for(j in subnames){
+            subsubnames=intervals[[i]][[j]]
+            for(k in subsubnames){
+              subsubsublength=length(modellistnew[[i]][[j]][[k]])
+              for(l in 1:subsublength){
+                intervalmin=intervals[[i]][[j]][[k]][[l]][1]
+                intervalmax=intervals[[i]][[j]][[k]][[l]][2]
+                currentval=modellistnew[[i]][[j]][[k]][l]
+                modellistnew[[i]][[j]][[k]][l]=max(intervalmin, min(intervalmax, currentval, na.rm = FALSE), na.rm = FALSE)
+              }
             }
           }
         }
       }
-    }
+    }  
   }
-  return(modellistnew)
+  
+  #Unlist the new modellist
+  parmnew=unlist(modellistnew)
+  
+  # Unlist and extract the tolog elements and log where required
+  parmnew=unlist(modellistnew)
+  for(i in tounlogIDs){
+    parmnew[i]=log10(parmnew[i])
+  }
+  
+  # Specify the new parm to be parsed back to the external optimisation function
+  parmnew=parmnew[fitIDs]
+  
+  return(list(parm=parmnew, modellist=modellistnew))
 }
