@@ -17,7 +17,7 @@ SBlim = 26, df = 100, raw = FALSE)
 Data of class profit.data. This must be generated by the \code{\link{profitSetupData}} function.
 }
   \item{modellist}{
-Model list (see \code{\link{profitMakeModel}} for details). To aid interpretting the results of fits the user can access \code{\link{profitRemakeModelList}}, where a current model with adjusted fit value is remade into a new model.
+Model list (see \code{\link{profitMakeModel}} for details). To aid interpretting the results of fits the user can access \code{\link{profitRemakeModellist}}, where an initial model is adjusted to include new parameter values and is remade into a new model.
 }
   \item{bulgeloc}{
 Location ID of bulge component in the Sersic list provided in \option{modellist}.
@@ -64,7 +64,7 @@ Projecting data back to 1D profiles is a knowingly imperfect process, but it can
 %% ~Make other sections like Warning with \section{Warning }{....} ~
 
 \seealso{
-\code{\link{profitEllipse}}, \code{\link{profitRemakeModelList}}
+\code{\link{profitEllipse}}, \code{\link{profitRemakeModellist}}
 }
 \examples{
 # Here we use galaxy G266033:
@@ -75,7 +75,7 @@ sigma = readFITS(system.file("extdata", 'KiDS/G266033sigma.fits',package="ProFit
 segim = readFITS(system.file("extdata", 'KiDS/G266033segim.fits',package="ProFit"))$imDat
 psf = readFITS(system.file("extdata", 'KiDS/G266033psfim.fits',package="ProFit"))$imDat
 
-#The rough best fit model for G266033 (KiDS)
+#The rough best-fit model for G266033 (KiDS)
 
 modellist=list(
   sersic=list(
