@@ -1,5 +1,5 @@
-\name{profitRemakeModelList}
-\alias{profitRemakeModelList}
+\name{profitRemakeModellist}
+\alias{profitRemakeModellist}
 %- Also NEED an '\alias' for EACH other topic documented here.
 \title{
 Reconstruct an Image Model
@@ -8,7 +8,7 @@ Reconstruct an Image Model
 This is a convenience function that allows users to easily substitute into a legal image model results from an optimisation run. This can be parsed directly into \code{\link{profitMakeModel}}. It uses the same conversion functions in the same manner as \code{\link{profitLikeModel}} so you can create an image model that is fully consistent. These consistent model lists can be used for other analysis, e.g. \code{\link{profitEllipsePlot}}.
 }
 \usage{
-profitRemakeModelList(parm, modellist, tofit, tolog, intervals, constraints)
+profitRemakeModellist(parm, modellist, tofit, tolog, intervals, constraints, Data)
 }
 %- maybe also 'usage' for other objects documented here.
 \arguments{
@@ -30,6 +30,9 @@ List; optional, interval limits for each parameter, using a similar list structu
   \item{constraints}{
 Function; optional, takes the \option{modellist} and returns a list with exactly the same structure (see \code{\link{profitSetupData}} for details). If missing then no constraints are applied.
 }
+  \item{Data}{
+Data of class profit.data; optional. This must be generated by the \code{\link{profitSetupData}} function. If the \option{Data} structure is present then \option{modellist}, \option{tofit}, \option{tolog}, \option{intervals} and \option{constraints} are taken from the list items within \option{Data}. If they are also provided as separate input arguments then these are used instead, so be careful when mixing and matching.
+}
 }
 \value{
 A new model list with the same structure as \option{modellist}.
@@ -50,7 +53,7 @@ modellist = list(
     nser  = c(3, 10),
     ang  = c(46, 80),
     axrat  = c(0.4, 0.6),
-    box = c(0.5,-0.5)
+    box = c(0,-0.5)
   )
 )
 
@@ -69,9 +72,9 @@ tofit = list(
   )
 )
 
-parm=c(60,60,11,10,1,4,1)
+parm=c(55,55,12,20,1,4,0.8)
 
-magimage(profitMakeModel(profitRemakeModelList(parm, modellist, tofit)))
+magimage(profitMakeModel(profitRemakeModellist(parm, modellist, tofit)$modellist))
 }
 % Add one or more standard keywords, see file 'KEYWORDS' in the
 % R documentation directory.
