@@ -8,7 +8,11 @@ On GitHub
 
 FEATURE: You can now directly specify the region to use for fitting in profitSetupData (before it always used a combination of segim and mask, which it will use if this is not provided). Old code will work as before. Argument order has changed to accommodate.
 
-FIXED: Solaris issue with gauss.cpp (removed it for now since we do not use it).
+CHANGE: profitRemakeModelList -> profitRemakeModellist (to be more consistent with how modellist is named throughout ProFit).
+
+FEATURE: profitRemakeModellist can now take Data as an input for simplicity.
+
+FIXED: Solaris issue with gauss.cpp.
 
 FIXED: profitMakePlots so the region is shown correctly.
 
